# ai-agent-playground

./: .env.example  .gitignore  README.md  TESTING.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
.claude/: settings.local.json
configs/: default.json  large_scale.json
examples/: basic_simulation.py  headless_simulation.py
src/ai_agent_playground/: __init__.py
src/ai_agent_playground/agents/: __init__.py  behaviors.py  types.py
src/ai_agent_playground/cli/: __init__.py  main.py
src/ai_agent_playground/core/: __init__.py  agent.py  engine.py  events.py
src/ai_agent_playground/environment/: __init__.py  physics.py  spatial.py  world.py
src/ai_agent_playground/utils/: __init__.py  logging_config.py  metrics.py  visualization.py
tests/: __init__.py  test_agents.py  test_core.py  test_environment.py  test_utils.py
